Responsive Website Created

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "responsive-website",
+  "name": "responsive-websitegithub-linked",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
