--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "src/index.js",
   "dependencies": {
     "bootstrap": "5.0.2",
+    "@testing-library/dom": "7.22.1",
+    "jest": "26.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.4",
@@ -23,10 +25,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
